Fix bug where the footer consumes too much space that it overrides the shortened resulted url

--- a/static/custom.css
+++ b/static/custom.css
@@ -3,10 +3,12 @@
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
+  height: 25%;
+  text-align: center;
 }
 
 .flashes li {
